--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-pdf": "^10.3.0",
-    "react-transliterate": "^1.1.9",
+    "sanscript": "^0.0.2",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
