--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@vercel/analytics": "^1.6.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
+    "html2pdf.js": "^0.14.0",
+    "jspdf": "^4.2.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.563.0",
     "mongodb": "^7.1.0",
+    "mongoose": "^9.2.1",
     "next": "16.1.6",
     "pdfjs-dist": "^5.4.624",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-pdf": "^10.3.0",
+    "react-to-print": "^3.2.0",
     "sanscript": "^0.0.2",
     "tailwind-merge": "^3.4.0"
   },
