--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/analytics": "^1.6.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
+    "html-to-image": "^1.11.13",
     "html2pdf.js": "^0.14.0",
     "jspdf": "^4.2.0",
     "jspdf-autotable": "^5.0.7",
